# arbitrage_playground

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
models/: LGBM_Percent_Change_v1.pkl  LSTM_final.pkl  XGB_Gas_Prices_v2.pkl  XGB_final.pkl  gas_fees_10min_forecast_XGBoost.pkl  gas_fees_1min_forecast_XGBoost.pkl  gas_fees_1min_forecast_XGBoost.pkl.perf  gas_fees_5min_forecast_XGBoost.pkl  percent_change_10min_forecast_LGBM.pkl  percent_change_1min_forecast_LGBM.pkl  percent_change_1min_forecast_LGBM.pkl.perf  percent_change_5min_forecast_LGBM.pkl
notebooks/: Alchemy.ipynb  Etherscan.ipynb  Etherscan2.ipynb  Etherscan2_advanced.ipynb  Etherscan2_with_merge.ipynb  GasFees_Exploration.ipynb  GasFees_Issue30.ipynb  TheGraph.ipynb  analysis.ipynb  find_pool_pairs.ipynb  inference.ipynb  labeling_issue.ipynb  training_gasfees.ipynb  training_percent_change.ipynb
src/: alchemy.py  alchemyutils.py  arbutils.py  dataset.py  etherscanutils.py  fetch.py  streamlit_app.py  streamlit_arbitrage_app.py  streamlit_arbitrage_playground.py  train.py
tests/: test_app.py
training/: train.py
