[tool.poetry]                                                               
name = "streamlit-env"
version = "0.1.0"
description = ""
authors = ["David Scaperoth <scaperoth@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
web3 = "^7.6.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
